video list entry click functionality working

--- a/src/templates/videoListEntry.html
+++ b/src/templates/videoListEntry.html
@@ -1,9 +1,9 @@
-<li class="video-list-entry media">
+<li class="video-list-entry media" ng-click="$ctrl.setVideo($ctrl.video)">
   <div class="media-left">
     <img class="media-object" src="https://i.ytimg.com/vi/{{$ctrl.video.id.videoId}}/default.jpg" />
   </div>
   <div class="media-body">
-    <div class="video-list-entry-title">{{$ctrl.video.snippet.title}}</div>
+    <div class="video-list-entry-title" ">{{$ctrl.video.snippet.title}}</div>
     <div class="video-list-entry-detail">{{$ctrl.video.snippet.description}}</div>
   </div>
 </li>
