--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -9,7 +9,7 @@
       <video-player video="$ctrl.video"><h5><em>videoPlayer</em> component goes here</h5></video-player>
     </div>
     <div class="col-md-5">
-      <video-list videos="$ctrl.videoData"><h5><em>videoList</em> component goes here</h5></video-list>
+      <video-list videos="$ctrl.videoData" set-video="$ctrl.setVideo"><h5><em>videoList</em> component goes here</h5></video-list>
     </div>
   <div>
 </div>
