--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -1,6 +1,15 @@
 <div class="search-bar form-inline">
+  <input class="form-control" type="text" ng-model="$ctrl.query" ng-change="$ctrl.result($ctrl.query)"/>
+ <!--  <button class="btn" ng-click="$ctrl.result($ctrl.query)">  
+    Search  
+  </button> -->
+</div>
+
+
+<!-- <div class="search-bar form-inline">
   <input class="form-control" type="text" />
-  <button class="btn">
+  <button class="btn" ng-click="{{'some expression'}}">
     <span class="glyphicon glyphicon-search"></span>
   </button>
 </div>
+ -->
